fixed spacing

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -75,6 +75,10 @@ h4, h5, h6 {
 	font-weight: 700;
 }
 
+p + ul {
+    margin-top: -10px;
+}
+
 a {
   color:#C30000;
   font-weight:200;
